--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="row">
                 <div class="col-lg-12 col-xs-12">
                     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                        <a class="navbar-brand" href="index.html">Navbar</a>
+                        <a class="navbar-brand" href="index.html">Bara Sushi</a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"></span>
                         </button>
@@ -47,7 +47,7 @@
         <section class="containerfluid">
             <div class="row">
                 <div class="col-lg-3 col-xs-12">
-                    <h1 class="frase" data-aos="zoom-in">Deleitate con nuestros platos</h1>
+                    <h1 class="frase" data-aos="zoom-in">Disfruta de nuestros platos</h1>
                 </div>
                 <div class="col-lg-9 col-xs-12 modifMenu">
                     <p>
