modifique el h1 del index

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section class="containerfluid">
             <div class="row">
                 <div class="col-lg-3 col-xs-12">
-                    <h1 class="frase" data-aos="zoom-in">Disfruta de nuestros platos</h1>
+                    <h1 class="frase" data-aos="zoom-in">Conocé y disfruta de nuestros platos</h1>
                 </div>
                 <div class="col-lg-9 col-xs-12 modifMenu">
                     <p>
