Agregue contenido en el menu collapse

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
                             <div class="col">
                                 <div class="collapse multi-collapse" id="multiCollapseExample1">
                                     <div class="card card-body">
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, alias accusamus aut possimus iusto esse, cum necessitatibus aliquid tenetur blanditiis expedita magnam quam perferendis harum. Maxime asperiores repellat cupiditate accusamus.
+                                        Chupé de langostinos <br>
+                                        Rabas <br>
+                                        Empanadas de queso con camarones
                                     </div>
                                 </div>
                             </div>
@@ -71,7 +73,9 @@
                             <div class="col">
                                 <div class="collapse multi-collapse" id="multiCollapseExample2">
                                     <div class="card card-body">
-                                        Some placeholder content for the second collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                                        Causa peruana de atún (sin TACC) <br>
+                                        Ceviche mixto (sin TACC) <br>
+                                        Wok de pollo (sin TACC)
                                     </div>
                                 </div>
                             </div>
@@ -80,7 +84,9 @@
                             <div class="col">
                                 <div class="collapse multi-collapse" id="multiCollapseExample3">
                                     <div class="card card-body">
-                                        Some placeholder content for the second collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                                        Helado tres sabores <br>
+                                        Mousse de chocolate <br>
+                                        Flan    
                                     </div>
                                 </div>
                             </div>
@@ -89,7 +95,9 @@
                             <div class="col">
                                 <div class="collapse multi-collapse" id="multiCollapseExample4">
                                     <div class="card card-body">
-                                        Some placeholder content for the second collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                                        Combinado Bara - 15 Piezas (sin TACC) $1.250 <br>
+                                        Combinado Bara Hot - 15 Piezas $1.250<br>
+                                        Combinado - 30 Piezas a elección $ 2.000
                                     </div>
                                 </div>
                             </div>
@@ -98,7 +106,8 @@
                             <div class="col">
                                 <div class="collapse multi-collapse" id="multiCollapseExample5">
                                     <div class="card card-body">
-                                        Some placeholder content for the second collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                                        Salmón al teriyaki (sin TACC) + bebida + postre $ 1.800 <br>
+                                        Combinado Bara Hot - 15 Piezas + bebida + postre $1.700 
                                     </div>
                                 </div>
                             </div>
