agregue sucursales y direcciones

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -48,11 +48,14 @@
     </section> 
     <article>
     <h1 class="historia__titulo--tamanio historia__titulo--color">Nuestra Historia</h1>
-    <p class="historia__contenido historia__contenido--tamanio historia__contenido--color">Lorem ipsum dolor sit, amet consectetur 
-        adipisicing elit. Reiciendis qui <strong> laboriosam esse exercitationem </strong> modi doloremque maxime facilis, assumenda culpa, voluptas, 
-        magnam non nulla ea placeat impedit. Illo provident maiores dignissimos. <br>
-        Lorem ipsum, dolor sit amet consectetur <em> adipisicing elit</em>. Quibusdam eius maiores, cum cupiditate, ullam obcaecati voluptatum pariatur fugiat neque reiciendis mollitia suscipit 
-        unde tenetur, recusandae velit excepturi dolorem? Veniam, consectetur.</p>
+    <p class="historia__contenido historia__contenido--tamanio historia__contenido--color">Somos una empresa familiar mendocina, integrada 
+        por Betty y Oscar, dos hermanos apasionados por el sushi. Nuestra pasion por el sushi, comenzo a partir de un viaje que realizamos 
+        a China en el año 2010 y fuimos envueltos por esa cultura, esas costumbre y especialmente por sus delicias gastronomicas.
+        Desde ese momento, decidimos que queriamos emprender juntos este proyecto para traer a nuestra querida Mendoza, aunque sea un poquito 
+        de esa realidad que vivimos y lo hicimos abriendo nuestra <strong>primera sucursal</strong> en el año 2012 en Chacras de Coria, Luján de Cuyo. 
+        Años mas tarde,en 2017 abrimos nuestra <strong>segunda sucursal</strong> en Godoy Cruz y finalmente este año 2021 abrimos nuestra <strong>tercera casa</strong> 
+        en la hermosa Ciudad de Mendoza.
+    </p>
     </article>
     <section>
         <div class="historia__imagenes">
