--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -46,7 +46,15 @@
     <main>
         <section>
             <h1 class="mapa">Veni a visitarnos a nuestra nueva sucursal.</h1>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13402.114136353135!2d-68.850944!3d-32.8841915!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7df574a5c41bcf73!2sBARA%20SUSHI!5e0!3m2!1ses-419!2sar!4v1620603785513!5m2!1ses-419!2sar" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <div class="sucursalesYdirecciones"> 
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13402.114136353135!2d-68.850944!3d-32.8841915!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7df574a5c41bcf73!2sBARA%20SUSHI!5e0!3m2!1ses-419!2sar!4v1620603785513!5m2!1ses-419!2sar" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" class="mapa2"></iframe>
+                <div class="direcciones">
+                    <h3>Sucrusales y direcciones</h3>
+                    <p><u>Chacras de Coria</u>: Avenida Pepito 123, Charcas de Coria, Luján de Cuyo, Mendoza</p>
+                    <p><u>Godoy Cruz</u>: Avenida Siempre Viva 456, Godoy Cruz, Mendoza</p>
+                    <p><u>Ciudad</u>: Calle Falsa 789, Ciudad de Mendoza, Mendoza</p>
+                </div>
+            </div>
         </section>
     </main>
         <footer class="containerfluid pieDePagina">
