modifique imagenes de pagina sucursales y agregue icono en contactos

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -44,33 +44,35 @@
         </div>    
     </header>
     <main>
-    <h1 class="contacto">Dejanos tus datos</h1>
-    <form action="#">
-        <input type="text" name="nombre"    placeholder="Ingresa tu nombre"><br>
-        <input type="text" name="apellido"  placeholder="Ingresa tu apellido"><br>
-        <input type="email" name="email" placeholder="Ingresa tu e-mail" ><br>
-        <label>Quieres recibir informacion nuestra?</label><br>
-        <input type="radio" name="1">Si
-        <input type="radio" name="1">No <br>
-        <label>Que quieres que te enviemos?</label><br>
-        <input type="checkbox">Nuestro menu <br>    
-        <input type="checkbox">Promos <br>
-        <input type="checkbox">Descuentos <br>
-        <input type="checkbox">Recetas <br>
-        <label>Que sucursal te interesa</label><br>
-        <select>
-            <option>Sucursal Centro</option><br>
-            <option>Sucursal Chacras</option><br>
-            <option>Sucursal Godoy Cruz</option><br>
-        </select><br>
-
-        <input type="submit">
-        <input type="reset">
-        <label>contraseña</label><br>
-
-    </form>
+        <h1 class="contacto">Dejanos tus datos</h1>
+        <section class="formularioEimagen">
+            <form action="#">
+                <input type="text" name="nombre"    placeholder="Ingresa tu nombre"><br>
+                <input type="text" name="apellido"  placeholder="Ingresa tu apellido"><br>
+                <input type="email" name="email" placeholder="Ingresa tu e-mail" ><br>
+                <label>Quieres recibir informacion nuestra?</label><br>
+                <input type="radio" name="1">Si
+                <input type="radio" name="1">No <br>
+                <label>Que quieres que te enviemos?</label><br>
+                <input type="checkbox">Nuestro menu <br>    
+                <input type="checkbox">Promos <br>
+                <input type="checkbox">Descuentos <br>
+                <input type="checkbox">Recetas <br>
+                <label>Que sucursal te interesa</label><br>
+                <select>
+                    <option>Sucursal Centro</option><br>
+                    <option>Sucursal Chacras</option><br>
+                    <option>Sucursal Godoy Cruz</option><br>
+                </select><br>
+                <input type="submit">
+                <input type="reset">
+                <label>contraseña</label><br>
+            </form>
+            <div>
+                <img src="../images/colaboracion.png" alt="red de contactos" width="24%" class="imgContacto">
+            </div>
+        </section>  
     </main>
-
     <footer class="containerfluid pieDePagina">
         <div class="row">
             <div class="col-lg-6 col-xs-12">
