--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -59,9 +59,9 @@
     </article>
     <section>
         <div class="historia__imagenes">
-                <img src="../images/cultivo.png" alt="cosecha" class="historia__imagenes--tamanio">
-                <img src="../images/cocina.gif" alt="cocina" class="historia__imagenes--tamanio">
-                <img src="../images/delivery1.jpg" alt="delivery" class="historia__imagenes--tamanio">
+                <img src="../images/cosecha.png" alt="cosecha" class="historia__imagenes--tamanio">
+                <img src="../images/cocinando.png" alt="cocina" class="historia__imagenes--tamanio">
+                <img src="../images/scooter.png" alt="delivery" class="historia__imagenes--tamanio">
         </div>
     </section>
     </main>
