Elimine la clase active del home de todos los html y agregue los scripts al final de la pagina sucursales y contacto para que funcione el menu hamburguesa en mobile

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                           <div class="navbar-nav">
-                            <a class="nav-link active" href="pages/nosotros.html">Nosotros <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="pages/nosotros.html">Nosotros <span class="sr-only">(current)</span></a>
                             <a class="nav-link" href="pages/menu.html">Menu</a>
                             <a class="nav-link" href="pages/sucursales.html">Sucursales</a>
                             <a class="nav-link" href="pages/contacto.html">Contacto</a>
