--- a/pages/menu.html
+++ b/pages/menu.html
@@ -34,7 +34,7 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                       <div class="navbar-nav">
-                        <a class="nav-link active" href="../index.html">Inicio<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="../index.html">Inicio<span class="sr-only">(current)</span></a>
                         <a class="nav-link" href="nosotros.html">Nosotros</a>
                         <a class="nav-link" href="sucursales.html">Sucursales</a>
                         <a class="nav-link" href="contacto.html">Contacto</a>
