--- a/index.html
+++ b/index.html
@@ -20,23 +20,24 @@
 <body>
         <header class="containerfluid">
             <div class="row">
-                <div class="col-lg-12 col-xs-12">
+                <div class="col-lg-6 col-xs-12">
                     <img src="images/logo.jpg" alt="logo" width="70px" class="logo">
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-12 col-xs-12">
-                    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                        <a class="navbar-brand" href="index.html">Bara Sushi</a>
+            <div class="row barraNav">
+                <div class="col-lg-1 col-xs-12">
+                    <nav class="navbar navbar-expand-lg navbar-light">
+                        <a class="navbar-brand" href="index.html"></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                           <div class="navbar-nav">
-                            <a class="nav-link" href="pages/nosotros.html">Nosotros <span class="sr-only">(current)</span></a>
-                            <a class="nav-link" href="pages/menu.html">Menu</a>
-                            <a class="nav-link" href="pages/sucursales.html">Sucursales</a>
-                            <a class="nav-link" href="pages/contacto.html">Contacto</a>
+                            <a class="nav-link inicioNav" href="index.html">Inicio<span class="sr-only">(current)</span></a>
+                            <a class="nav-link nosotrosNav" href="pages/nosotros.html">Nosotros<span class="sr-only">(current)</span></a>
+                            <a class="nav-link menuNav" href="pages/menu.html">Menu</a>
+                            <a class="nav-link sucursalesNav" href="pages/sucursales.html">Sucursales</a>
+                            <a class="nav-link contactoNav" href="pages/contacto.html">Contacto</a>
                           </div>
                         </div>
                     </nav>
@@ -47,7 +48,7 @@
         <section class="containerfluid">
             <div class="row">
                 <div class="col-lg-3 col-xs-12">
-                    <h1 class="frase" data-aos="zoom-in">Conocé y disfruta de nuestros platos</h1>
+                    <h1 class="frase" data-aos="zoom-in">Conocé y disfruta nuestros platos</h1>
                 </div>
                 <div class="col-lg-9 col-xs-12 modifMenu">
                     <p>
@@ -115,7 +116,7 @@
                 </div>
             </div>
         </section>
-        <section class="container">
+        <section class="containerfluid">
             <div class="row">
                 <div class="col-lg-12 col-xs-12">
                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -145,13 +146,20 @@
         </main>
         <footer class="containerfluid pieDePagina">
             <div class="row">
-                <div class="col-lg-6 col-xs-12">
-                    <h5>CONTACTANOS</h5>
+                <div class="col-lg-4 col-xs-12">
+                    <h5 class="pieDePagina__letra">CONTACTANOS</h5>
+                    <p>Email: contactanos@barasushi.com</p>
+                    <p>Tel.: 0261-123456789</p>
                 </div>
-                <div class="col-lg-6 col-xs-12">
-                    <img src="images/facebook.png" alt="facebook" class="img-fluid">
-                    <img src="images/instagram.png" alt="instagram" class="img-fluid">
-                    <img src="images/wapp.png" alt="whatsapp" class=" img-fluid">
+                <div class="col-lg-4 col-xs-12">
+                    <h5 class="pieDePagina__letra">REDES SOCIALES</h5>
+                    <img src="images/facebook.png" alt="facebook" class="img-fluid hover">
+                    <img src="images/instagram.png" alt="instagram" class="img-fluid hover">
+                    <img src="images/whatsapp.png" alt="whatsapp" class=" img-fluid hover">
+                </div>
+                <div class="col-lg-4 col-xs-12 footer__copyright">
+                    <img src="images/copyright.png" alt="copyright" class="imgCopy">
+                    <h6>Created by Agustín Groppa</h6>
                 </div>
             </div>
         </footer>
