--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,6 +10,9 @@
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;1,300;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <!--AOS-->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--CSS Bootstrap-->
@@ -20,68 +23,81 @@
 <body>
     <header class="containerfluid">
         <div class="row">
-            <div class="col-lg-12 col-xs-12">
+            <div class="col-lg-6 col-xs-12">
                 <img src="../images/logo.jpg" alt="logo" width="70px" class="logo">
             </div>
         </div>
-        <div class="row">
-            <div class="col-lg-12 col-xs-12">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <a class="navbar-brand" href="../index.html">Bara Sushi</a>
+        <div class="row barraNav">
+            <div class="col-lg-1 col-xs-12">
+                <nav class="navbar navbar-expand-lg navbar-light">
+                    <a class="navbar-brand" href="../index.html"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                       <div class="navbar-nav">
-                        <a class="nav-link" href="../index.html">Inicio<span class="sr-only">(current)</span></a>
-                        <a class="nav-link" href="nosotros.html">Nosotros</a>
-                        <a class="nav-link" href="menu.html">Menu</a>
-                        <a class="nav-link" href="sucursales.html">Sucursales</a>
+                        <a class="nav-link inicioNav" href="../index.html">Inicio<span class="sr-only">(current)</span></a>
+                        <a class="nav-link nosotrosNav" href="nosotros.html">Nosotros</a>
+                        <a class="nav-link menuNav" href="menu.html">Menu</a>
+                        <a class="nav-link sucursalesNav" href="sucursales.html">Sucursales</a>
+                        <a class="nav-link contactoNav" href="contacto.html">Contacto</a>
                       </div>
                     </div>
                 </nav>
             </div>
         </div>    
     </header>
-    <main>
-        <h1 class="contacto">Dejanos tus datos</h1>
-        <section class="formularioEimagen">
-            <form action="#">
-                <input type="text" name="nombre"    placeholder="Ingresa tu nombre"><br>
-                <input type="text" name="apellido"  placeholder="Ingresa tu apellido"><br>
-                <input type="email" name="email" placeholder="Ingresa tu e-mail" ><br>
-                <label>Quieres recibir informacion nuestra?</label><br>
-                <input type="radio" name="1">Si
-                <input type="radio" name="1">No <br>
-                <label>Que quieres que te enviemos?</label><br>
-                <input type="checkbox">Nuestro menu <br>    
-                <input type="checkbox">Promos <br>
-                <input type="checkbox">Descuentos <br>
-                <input type="checkbox">Recetas <br>
-                <label>Que sucursal te interesa</label><br>
-                <select>
-                    <option>Sucursal Centro</option><br>
-                    <option>Sucursal Chacras</option><br>
-                    <option>Sucursal Godoy Cruz</option><br>
-                </select><br>
-                <input type="submit">
-                <input type="reset">
-                <label>contraseña</label><br>
-            </form>
-            <div>
-                <img src="../images/colaboracion.png" alt="red de contactos" width="24%" class="imgContacto">
+    <main class="contactosForm">
+        <h1 class="contacto">Dale te esperamos</h1>
+        <section class="containerfluid formularioEimagen">
+            <div class="row">
+                <div class="col-lg-4 col-xs-12">
+                    <form action="#">
+                        <h4 class="letra__formulario inicioForm">Dejanos tus datos</h4>
+                        <input type="text" name="nombre"    placeholder="Ingresa tu nombre"><br>
+                        <input type="text" name="apellido"  placeholder="Ingresa tu apellido"><br>
+                        <input type="email" name="email" placeholder="Ingresa tu e-mail" ><br>
+                        <label><b class="letra__formulario">Quieres recibir informacion nuestra?</b></label><br>
+                        <input type="radio" name="1">Si
+                        <input type="radio" name="1">No <br>
+                        <label><b class="letra__formulario">Que quieres que te enviemos?</b></label><br>
+                        <input type="checkbox">Nuestro menu <br>    
+                        <input type="checkbox">Promos <br>
+                        <input type="checkbox">Descuentos <br>
+                        <input type="checkbox">Recetas <br>
+                        <label><b class="letra__formulario">Que sucursal te interesa</b></label><br>
+                        <select>
+                            <option>Sucursal Centro</option><br>
+                            <option>Sucursal Chacras</option><br>
+                            <option>Sucursal Godoy Cruz</option><br>
+                        </select><br>
+                        <input type="submit">
+                        <input type="reset">
+                        <br>
+                    </form>
+                </div>
+                <div class="col-lg-8 col-xs-12">
+                    <img src="../images/sucursal.jpg" alt="sucursal" width="80%" class="imgSucursal">
+                </div>
             </div>
         </section>  
     </main>
     <footer class="containerfluid pieDePagina">
         <div class="row">
-            <div class="col-lg-6 col-xs-12">
-                <h5>CONTACTANOS</h5>
+            <div class="col-lg-4 col-xs-12">
+                <h5 class="pieDePagina__letra">CONTACTANOS</h5>
+                <p>Email: contactanos@barasushi.com</p>
+                <p>Tel.: 0261-123456789</p>
             </div>
-            <div class="col-lg-6 col-xs-12">
-                <img src="../images/facebook.png" alt="facebook" class="img-fluid">
-                <img src="../images/instagram.png" alt="instagram" class="img-fluid">
-                <img src="../images/wapp.png" alt="whatsapp" class=" img-fluid">
+            <div class="col-lg-4 col-xs-12">
+                <h5 class="pieDePagina__letra">REDES SOCIALES</h5>
+                <img src="../images/facebook.png" alt="facebook" class="img-fluid hover">
+                <img src="../images/instagram.png" alt="instagram" class="img-fluid hover">
+                <img src="../images/whatsapp.png" alt="whatsapp" class=" img-fluid hover">
+            </div>
+            <div class="col-lg-4 col-xs-12 footer__copyright">
+                <img src="../images/copyright.png" alt="copyright" class="imgCopy">
+                <h6>Created by Agustín Groppa</h6>
             </div>
         </div>
     </footer>
