--- a/pages/menu.html
+++ b/pages/menu.html
@@ -21,23 +21,24 @@
 <body>
     <header class="containerfluid">
         <div class="row">
-            <div class="col-lg-12 col-xs-12">
+            <div class="col-lg-6 col-xs-12">
                 <img src="../images/logo.jpg" alt="logo" width="70px" class="logo">
             </div>
         </div>
-        <div class="row">
-            <div class="col-lg-12 col-xs-12">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <a class="navbar-brand" href="../index.html">Bara Sushi</a>
+        <div class="row barraNav">
+            <div class="col-lg-1 col-xs-12">
+                <nav class="navbar navbar-expand-lg navbar-light">
+                    <a class="navbar-brand" href="../index.html"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                       <div class="navbar-nav">
-                        <a class="nav-link" href="../index.html">Inicio<span class="sr-only">(current)</span></a>
-                        <a class="nav-link" href="nosotros.html">Nosotros</a>
-                        <a class="nav-link" href="sucursales.html">Sucursales</a>
-                        <a class="nav-link" href="contacto.html">Contacto</a>
+                        <a class="nav-link inicioNav" href="../index.html">Inicio<span class="sr-only">(current)</span></a>
+                        <a class="nav-link nosotrosNav" href="nosotros.html">Nosotros</a>
+                        <a class="nav-link menuNav" href="menu.html">Menu</a>
+                        <a class="nav-link sucursalesNav" href="sucursales.html">Sucursales</a>
+                        <a class="nav-link contactoNav" href="contacto.html">Contacto</a>
                       </div>
                     </div>
                 </nav>
@@ -46,6 +47,7 @@
     </header>
     <main>
         <h1 class="ubicacionFrase ubicacionFrase__modif--color ubicacionFrase__modif--font">Disfruta de nuesta carta</h1>
+        <img src="../images/imginicial.jpg" alt="piezas de sushi" width="90%" class="piezasSushi">
         <section class="aos">
             <div class="row">
                 <div class="col-lg-2 col-xs-12">
@@ -118,18 +120,26 @@
             <iframe width="400" height="200" src="https://www.youtube.com/embed/l-kcNbBXVms" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
     </main>
-        <footer class="containerfluid pieDePagina">
-            <div class="row">
-                <div class="col-lg-6 col-xs-12">
-                    <h5>CONTACTANOS</h5>
-                </div>
-                <div class="col-lg-6 col-xs-12">
-                    <img src="../images/facebook.png" alt="facebook" class="img-fluid">
-                    <img src="../images/instagram.png" alt="instagram" class="img-fluid">
-                    <img src="../images/wapp.png" alt="whatsapp" class=" img-fluid">
-                </div>
+    <footer class="containerfluid pieDePagina">
+        <div class="row">
+            <div class="col-lg-4 col-xs-12">
+                <h5 class="pieDePagina__letra">CONTACTANOS</h5>
+                <p>Email: contactanos@barasushi.com</p>
+                <p>Tel.: 0261-123456789</p>
             </div>
-        </footer>
+            <div class="col-lg-4 col-xs-12">
+                <h5 class="pieDePagina__letra">REDES SOCIALES</h5>
+                <img src="../images/facebook.png" alt="facebook" class="img-fluid hover">
+                <img src="../images/instagram.png" alt="instagram" class="img-fluid hover">
+                <img src="../images/whatsapp.png" alt="whatsapp" class=" img-fluid hover">
+            </div>
+            <div class="col-lg-4 col-xs-12 footer__copyright">
+                <img src="../images/copyright.png" alt="copyright" class="imgCopy">
+                <h6>Created by Agustín Groppa</h6>
+            </div>
+        </div>
+    </div>
+    </footer>
     <!--script AOS-->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
