--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -19,23 +19,24 @@
 <body>
     <header class="containerfluid">
         <div class="row">
-            <div class="col-lg-12 col-xs-12">
+            <div class="col-lg-6 col-xs-12">
                 <img src="../images/logo.jpg" alt="logo" width="70px" class="logo">
             </div>
         </div>
-        <div class="row">
-            <div class="col-lg-12 col-xs-12">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <a class="navbar-brand" href="../index.html">Bara Sushi</a>
+        <div class="row barraNav">
+            <div class="col-lg-1 col-xs-12">
+                <nav class="navbar navbar-expand-lg navbar-light">
+                    <a class="navbar-brand" href="../index.html"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                       <div class="navbar-nav">
-                        <a class="nav-link" href="../index.html">Inicio<span class="sr-only">(current)</span></a>
-                        <a class="nav-link" href="menu.html">Menu</a>
-                        <a class="nav-link" href="sucursales.html">Sucursales</a>
-                        <a class="nav-link" href="contacto.html">Contacto</a>
+                        <a class="nav-link inicioNav" href="../index.html">Inicio<span class="sr-only">(current)</span></a>
+                        <a class="nav-link nosotrosNav" href="nosotros.html">Nosotros</a>
+                        <a class="nav-link menuNav" href="menu.html">Menu</a>
+                        <a class="nav-link sucursalesNav" href="sucursales.html">Sucursales</a>
+                        <a class="nav-link contactoNav" href="contacto.html">Contacto</a>
                       </div>
                     </div>
                 </nav>
@@ -49,7 +50,7 @@
     <article>
     <h1 class="historia__titulo--tamanio historia__titulo--color">Nuestra Historia</h1>
     <p class="historia__contenido historia__contenido--tamanio historia__contenido--color">Somos una empresa familiar mendocina, integrada 
-        por Betty y Oscar, dos hermanos apasionados por el sushi. Nuestra pasion por el sushi, comenzo a partir de un viaje que realizamos 
+        por Betty, Oscar y Flor, tres hermanos apasionados por el sushi. Nuestra <b>pasion por el sushi</b>, comenzo a partir de un viaje que realizamos 
         a China en el año 2010 y fuimos envueltos por esa cultura, esas costumbre y especialmente por sus delicias gastronomicas.
         Desde ese momento, decidimos que queriamos emprender juntos este proyecto para traer a nuestra querida Mendoza, aunque sea un poquito 
         de esa realidad que vivimos y lo hicimos abriendo nuestra <strong>primera sucursal</strong> en el año 2012 en Chacras de Coria, Luján de Cuyo. 
@@ -67,13 +68,20 @@
     </main>
     <footer class="containerfluid pieDePagina">
         <div class="row">
-            <div class="col-lg-6 col-xs-12">
-                <h5>CONTACTANOS</h5>
+            <div class="col-lg-4 col-xs-12">
+                <h5 class="pieDePagina__letra">CONTACTANOS</h5>
+                <p>Email: contactanos@barasushi.com</p>
+                <p>Tel.: 0261-123456789</p>
             </div>
-            <div class="col-lg-6 col-xs-12">
-                <img src="../images/facebook.png" alt="facebook" class="img-fluid">
-                <img src="../images/instagram.png" alt="instagram" class="img-fluid">
-                <img src="../images/wapp.png" alt="whatsapp" class=" img-fluid">
+            <div class="col-lg-4 col-xs-12">
+                <h5 class="pieDePagina__letra">REDES SOCIALES</h5>
+                <img src="../images/facebook.png" alt="facebook" class="img-fluid hover">
+                <img src="../images/instagram.png" alt="instagram" class="img-fluid hover">
+                <img src="../images/whatsapp.png" alt="whatsapp" class=" img-fluid hover">
+            </div>
+            <div class="col-lg-4 col-xs-12 footer__copyright">
+                <img src="../images/copyright.png" alt="copyright" class="imgCopy">
+                <h6>Created by Agustín Groppa</h6>
             </div>
         </div>
     </footer>
