--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -20,23 +20,24 @@
 <body>
     <header class="containerfluid">
         <div class="row">
-            <div class="col-lg-12 col-xs-12">
+            <div class="col-lg-6 col-xs-12">
                 <img src="../images/logo.jpg" alt="logo" width="70px" class="logo">
             </div>
         </div>
-        <div class="row">
-            <div class="col-lg-12 col-xs-12">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <a class="navbar-brand" href="../index.html">Bara Sushi</a>
+        <div class="row barraNav">
+            <div class="col-lg-1 col-xs-12">
+                <nav class="navbar navbar-expand-lg navbar-light">
+                    <a class="navbar-brand" href="../index.html"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                       <div class="navbar-nav">
-                        <a class="nav-link" href="../index.html">Inicio<span class="sr-only">(current)</span></a>
-                        <a class="nav-link" href="nosotros.html">Nosotros</a>
-                        <a class="nav-link" href="menu.html">Menu</a>
-                        <a class="nav-link" href="contacto.html">Contacto</a>
+                        <a class="nav-link inicioNav" href="../index.html">Inicio<span class="sr-only">(current)</span></a>
+                        <a class="nav-link nosotrosNav" href="nosotros.html">Nosotros</a>
+                        <a class="nav-link menuNav" href="menu.html">Menu</a>
+                        <a class="nav-link sucursalesNav" href="sucursales.html">Sucursales</a>
+                        <a class="nav-link contactoNav" href="contacto.html">Contacto</a>
                       </div>
                     </div>
                 </nav>
@@ -46,29 +47,40 @@
     <main>
         <section>
             <h1 class="mapa">Veni a visitarnos a nuestra nueva sucursal.</h1>
-            <div class="sucursalesYdirecciones"> 
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13402.114136353135!2d-68.850944!3d-32.8841915!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7df574a5c41bcf73!2sBARA%20SUSHI!5e0!3m2!1ses-419!2sar!4v1620603785513!5m2!1ses-419!2sar" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" class="mapa2"></iframe>
-                <div class="direcciones">
-                    <h3>Sucrusales y direcciones</h3>
-                    <p><u>Chacras de Coria</u>: Avenida Pepito 123, Charcas de Coria, Luján de Cuyo, Mendoza.- Tel: 111111, email: contactanos@barasushi.com</p>
-                    <p><u>Godoy Cruz</u>: Avenida Siempre Viva 456, Godoy Cruz, Mendoza.- Tel: 222222, email: contactanos@barasushi.com</p>
-                    <p><u>Ciudad</u>: Calle Falsa 789, Ciudad de Mendoza, Mendoza.- Tel: 333333, email: contactanos@barasushi.com</p>
+            <section class="containerfluid mapaSucursales">
+                <div class="row">
+                    <div class="col-lg-4 col-xs-12 sucursalesYdirecciones">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13402.114136353135!2d-68.850944!3d-32.8841915!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7df574a5c41bcf73!2sBARA%20SUSHI!5e0!3m2!1ses-419!2sar!4v1620603785513!5m2!1ses-419!2sar" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" class="mapa2"></iframe>
+                    </div>
+                    <div class="col-lg-8 col-xs-12 direcciones">
+                        <h3>Sucrusales y direcciones</h3>
+                        <p><u>Chacras de Coria</u>: Avenida Pepito 123, Charcas de Coria, Luján de Cuyo, Mendoza.- Tel: 111111, email: contactanos@barasushi.com</p>
+                        <p><u>Godoy Cruz</u>: Avenida Siempre Viva 456, Godoy Cruz, Mendoza.- Tel: 222222, email: contactanos@barasushi.com</p>
+                        <p><u>Ciudad</u>: Calle Falsa 789, Ciudad de Mendoza, Mendoza.- Tel: 333333, email: contactanos@barasushi.com</p>
+                    </div>
                 </div>
-            </div>
+            </section>
         </section>
     </main>
-        <footer class="containerfluid pieDePagina">
-            <div class="row">
-                <div class="col-lg-6 col-xs-12">
-                    <h5>CONTACTANOS</h5>
-                </div>
-                <div class="col-lg-6 col-xs-12">
-                    <img src="../images/facebook.png" alt="facebook" class="img-fluid">
-                    <img src="../images/instagram.png" alt="instagram" class="img-fluid">
-                    <img src="../images/wapp.png" alt="whatsapp" class=" img-fluid">
-                </div>
+    <footer class="containerfluid pieDePagina">
+        <div class="row">
+            <div class="col-lg-4 col-xs-12">
+                <h5 class="pieDePagina__letra">CONTACTANOS</h5>
+                <p>Email: contactanos@barasushi.com</p>
+                <p>Tel.: 0261-123456789</p>
             </div>
-        </footer>
+            <div class="col-lg-4 col-xs-12">
+                <h5 class="pieDePagina__letra">REDES SOCIALES</h5>
+                <img src="../images/facebook.png" alt="facebook" class="img-fluid hover">
+                <img src="../images/instagram.png" alt="instagram" class="img-fluid hover">
+                <img src="../images/whatsapp.png" alt="whatsapp" class=" img-fluid hover">
+            </div>
+            <div class="col-lg-4 col-xs-12 footer__copyright">
+                <img src="../images/copyright.png" alt="copyright" class="imgCopy">
+                <h6>Created by Agustín Groppa</h6>
+            </div>
+        </div>
+    </footer>
         <!--script AOS-->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
